--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body >
   
 
-  <div id="user-interface" class="centered dashboard flex-center flex-column" >
+  <div id="user-interface" class="centered " >
 
   </div>
 
